...
            android:orientation="vertical">

            <!-- prevent the EditText from automatically gaining focus -->
            <requestFocus />

            <EditText
                android:id="@+id/post_title_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginRight="@dimen/padding_large"
                android:background="@null"
...
                android:inputType="text|textCapSentences"
                android:textAppearance="@style/TextAppearance.Large.Light"
                tools:text="My awesome post title"
                />

            <EditText
                android:id="@+id/post_markdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/post_body_hint"
                android:inputType="text|textMultiLine|textLongMessage|textCapSentences"
...
